part2/2.8/manifests/deployment-todo-backend.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: todo-backend
  namespace: project
  labels:
    app: todo-backend
spec:
  replicas: 1
  selector:
    matchLabels:
      app: todo-backend
  template:
    metadata:
      labels:
        app: todo-backend
    spec:
      containers:
        - name: todo-backend
          image: tripplen63/todo-backend:2.8
          imagePullPolicy: Always
          ports:
            - containerPort: 3000
